--- a/components/List/index.module.scss
+++ b/components/List/index.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .container {
   width: 45%;
   &__title {
@@ -20,6 +22,20 @@
       width: 30%;
       height: 15vw;
       margin-bottom: 2vw;
+    }
+  }
+}
+
+@media (max-width: $media-max-width) {
+  .container {
+    width: 100%;
+
+    &__list {
+      &__item {
+        width: 45%;
+        height: 50vw;
+        margin-bottom: 8vw;
+      }
     }
   }
 }
