--- a/components/Create/index.module.scss
+++ b/components/Create/index.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   width: 45%;
+
   &__title {
     font-size: 30px;
     font-weight: 700;
@@ -10,7 +11,13 @@
   &__subtitle {
     font-size: 18px;
     font-weight: 400;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
+  }
+
+  &__error{
+    font-size: 18px;
+    color: rgb(248, 67, 67);
+    padding-bottom: 20px;
   }
 
   &__upload {
