--- a/components/PublicList/index.module.scss
+++ b/components/PublicList/index.module.scss
@@ -1,7 +1,17 @@
 @import "../../styles/variables.scss";
 
 .container {
-  width: 45%;
+  padding: 40px 40px 20px;
+
+  background-color: #191a23;
+    background-image: linear-gradient(135deg, #2f3141 25%, transparent 25%),
+      linear-gradient(225deg, #2f3141 25%, transparent 25%),
+      linear-gradient(45deg, #2f3141 25%, transparent 25%),
+      linear-gradient(315deg, #2f3141 25%, #191a23 25%);
+    background-position: 4px 0, 4px 0, 0 0, 0 0;
+    background-size: 4px 4px;
+    background-repeat: repeat;
+
   &__title {
     font-size: 30px;
     font-weight: 700;
@@ -15,15 +25,17 @@
 
   &__list {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
+
     &__item {
       width: 30%;
+      margin-right: 40px;
 
       &__image{
       object-fit: cover;
       width: 100%;
-      height: 150px;
+      height: 200px;
       margin-bottom: 10px
       
       }
@@ -38,7 +50,11 @@
       &__price{
         font-size: 18px;
         font-weight: 400;
-        margin-bottom: 50px;
+        padding-bottom: 20px;
+      }
+
+      &__buy{
+        margin-bottom: 3vw;
       }
     }
 
