--- a/components/common/Layout/index.module.scss
+++ b/components/common/Layout/index.module.scss
@@ -1,3 +1,11 @@
+@import '../../../styles/variables.scss';
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 .container {
   padding: 0 20px;
+  max-width: $max-width;
 }
