--- a/components/PublicList/index.module.scss
+++ b/components/PublicList/index.module.scss
@@ -63,13 +63,14 @@
 
 @media (max-width: $media-max-width) {
   .container {
-    width: 100%;
+    width: 90%;
 
     &__list {
       &__item {
-        width: 45%;
+        width: 100%;
         height: 50vw;
-        margin-bottom: 8vw;
+        margin: 0;
+        margin-bottom: 160px;
       }
     }
   }
