--- a/components/PublicList/index.module.scss
+++ b/components/PublicList/index.module.scss
@@ -36,7 +36,8 @@
       object-fit: cover;
       width: 100%;
       height: 200px;
-      margin-bottom: 10px
+      margin-bottom: 10px;
+      cursor: pointer;
       
       }
 
